@@ -2,26 +2,16 @@
 
 $EM_CONF[$_EXTKEY] = array(
     'title' => 'Debug Mysql DB',
-    'description' => 'Extends \\TYPO3\\CMS\\Core\\Database\\DatabaseConnection (former t3lib_db) to show Errors and Debug-Messages. Useful for viewing and debugging of sql-queries. Shows error messages if they occur. (For TYPO3 before 6.1 see versions 0.5.x)',
+    'description' => 'Extends \\TYPO3\\CMS\\Core\\Database\\DatabaseConnection (former t3lib_db) to show Errors and Debug-Messages. Useful for viewing and debugging of sql-queries. Shows error messages if they occur. (For TYPO3 before 6.1 use the versions 0.5.x)',
     'category' => 'misc',
-    'shy' => 0,
-    'version' => '0.6.3',
-    'dependencies' => '',
-    'conflicts' => 'dbal',
-    'priority' => '',
-    'loadOrder' => '',
-    'module' => '',
+    'version' => '0.6.4',
     'state' => 'stable',
     'uploadfolder' => 0,
     'createDirs' => '',
-    'modify_tables' => '',
     'clearcacheonload' => 0,
-    'lockType' => '',
     'author' => 'Stefan Geith / Franz Holzinger',
     'author_email' => 'franz@ttproducts.de',
     'author_company' => '',
-    'CGLcompliance' => '',
-    'CGLcompliance_note' => '',
     'constraints' => array(
         'depends' => array(
             'php' => '5.3.0-7.99.99',
